# cauterizer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  supply-chain.yml
crates/adapters/advisory-intake-artifacts/: Cargo.toml
crates/adapters/advisory-intake-artifacts/src/: lib.rs
crates/adapters/asset-portfolio-postgres/: Cargo.toml
crates/adapters/asset-portfolio-postgres/src/: lib.rs
crates/adapters/commercial-entitlements-postgres/: Cargo.toml
crates/adapters/commercial-entitlements-postgres/migrations/: 1005_entitlements.down.sql  1005_entitlements.sql
crates/adapters/commercial-entitlements-postgres/src/: lib.rs
crates/adapters/remediation-runs-postgres/: Cargo.toml
crates/adapters/remediation-runs-postgres/src/: lib.rs
crates/architecture-tests/: Cargo.toml
crates/architecture-tests/src/: lib.rs
crates/architecture-tests/tests/: p00_acceptance.rs  policy_fixtures.rs  workspace_architecture.rs
crates/cauterizer-api/: Cargo.toml
crates/cauterizer-api/src/: main.rs
crates/cauterizer-cli/: Cargo.toml
crates/cauterizer-cli/src/: main.rs
crates/cauterizer-contracts/: Cargo.toml
crates/cauterizer-contracts/src/: lib.rs
crates/cauterizer-infrastructure/: Cargo.toml
crates/cauterizer-infrastructure/migrations/: 0001_p04_metadata.down.sql  0001_p04_metadata.sql  0002_delivery_reliability.down.sql  0002_delivery_reliability.sql
crates/cauterizer-infrastructure/src/: artifacts.rs  crypto.rs  delivery.rs  filesystem_artifacts.rs  lib.rs  postgres.rs  s3_artifacts.rs  transactional.rs
crates/cauterizer-syntax/: Cargo.toml
crates/cauterizer-syntax/src/: authorization.rs  canonical_json.rs  classification.rs  digest.rs  envelope.rs  identifiers.rs  lib.rs  schema.rs  sensitive.rs  time.rs
crates/cauterizer-syntax/tests/: schema_drift.rs
crates/cauterizer-worker/: Cargo.toml
crates/contexts/advisory-intake/: Cargo.toml
crates/contexts/advisory-intake/src/: contracts.rs  domain.rs  lib.rs
crates/contexts/advisory-intake/src/application/: fixture.rs  memory.rs  ports.rs  service.rs
crates/contexts/asset-portfolio/: Cargo.toml
crates/contexts/asset-portfolio/src/: contracts.rs  domain.rs  lib.rs
crates/contexts/asset-portfolio/src/application/: memory.rs  ports.rs  projections.rs  resolver.rs  service.rs
crates/contexts/commercial-entitlements/: Cargo.toml
crates/contexts/commercial-entitlements/src/: contracts.rs  domain.rs  lib.rs
crates/contexts/commercial-entitlements/src/application/: memory.rs  mod.rs  ports.rs  service.rs
crates/contexts/external-actions/: Cargo.toml
crates/contexts/external-actions/src/: lib.rs
crates/contexts/integration-management/: Cargo.toml
crates/contexts/integration-management/src/: lib.rs
crates/contexts/isolated-execution/: Cargo.toml
crates/contexts/isolated-execution/src/: contracts.rs  domain.rs  lib.rs
crates/contexts/isolated-execution/src/application/: acquisition.rs  admission.rs  authentication.rs  memory.rs  ports.rs  security.rs  service.rs
crates/contexts/isolated-execution/src/infrastructure/: supervisor.rs
crates/contexts/organization-access/: Cargo.toml
crates/contexts/organization-access/src/: lib.rs
crates/contexts/organization-access/src/application/: authorization.rs  commands.rs  events.rs  facade.rs  memory.rs  mod.rs  ports.rs
crates/contexts/organization-access/src/contracts/: mod.rs
crates/contexts/organization-access/src/domain/: authorization.rs  events.rs  mod.rs  organization.rs  types.rs
crates/contexts/patch-proposals/: Cargo.toml
crates/contexts/patch-proposals/fuzz/: Cargo.toml
crates/contexts/patch-proposals/fuzz/corpus/unified_patch/: traversal.patch  valid.patch
crates/contexts/patch-proposals/fuzz/fuzz_targets/: unified_patch.rs
crates/contexts/patch-proposals/src/: application.rs  contracts.rs  lib.rs
crates/contexts/verification/: Cargo.toml
crates/contexts/verification/src/: lib.rs
crates/contexts/verification/src/application/: firewall.rs
crates/contexts/verification/src/domain/: qualification.rs
crates/contexts/verification/src/infrastructure/: pinned_fixture.rs
docs/: README.md
docs/adr/: ADR-001-bound-the-mvp-to-an-offline-human-gated-loop.md  ADR-002-separate-the-system-into-seven-bounded-contexts.md  ADR-003-use-immutable-snapshots-and-an-append-only-run-lifecycle.md  ADR-004-isolate-all-untrusted-execution-in-ephemeral-workers.md  ADR-005-enforce-a-solver-grader-conformance-firewall.md  ADR-006-make-remediation-verdicts-deterministic-and-evidence-based.md  ADR-007-emit-in-toto-compatible-evidence-bundles.md  ADR-008-integrate-upstream-tools-through-replaceable-adapters.md  ADR-009-add-enterprise-platform-bounded-contexts.md  ADR-010-enforce-tenant-isolation-and-zero-trust-authorization.md  ADR-011-classify-encrypt-redact-and-retain-data-by-policy.md  ADR-012-use-versioned-events-with-transactional-outbox-and-inbox.md  ADR-013-separate-transactional-metadata-from-content-addressed-artifacts.md  ADR-014-design-contract-first-idempotent-apis.md  ADR-015-centralize-secrets-and-cryptographic-key-lifecycle.md  ADR-016-build-audit-safe-observability.md  ADR-017-define-slos-resilience-and-disaster-recovery.md  ADR-018-deploy-control-data-and-execution-planes-separately.md  ADR-019-secure-the-software-supply-chain-and-release-process.md  ADR-020-separate-networked-acquisition-from-hermetic-evaluation.md  ADR-021-govern-schema-and-contract-evolution.md  ADR-022-adopt-risk-based-verification-and-release-gates.md  ADR-023-enforce-entitlements-quotas-and-auditable-usage.md  ADR-024-govern-integrations-plugins-and-webhooks.md  README.md
docs/architecture/: abuse-case-test-matrix.md  adr-acceptance-audit.md  data-and-key-inventory.md  data-flow-and-trust-boundaries.md  decision-traceability.md  p00-acceptance.tsv  p00-decision-record.md  platform-decisions.md  production-readiness.md  security-threat-model.md
docs/ddd/: README.md  context-map.md  implementation-scaffold.md
docs/development/: architecture-rules.md
scripts/ci/: README.md  (+2 more)
(+95 files in other folders)
