[workspace]
resolver = "3"
members = [
    "crates/architecture-tests",
    "crates/adapters/asset-portfolio-postgres",
    "crates/cauterizer-api",
    "crates/cauterizer-cli",
    "crates/cauterizer-contracts",
    "crates/cauterizer-infrastructure",
    "crates/cauterizer-syntax",
    "crates/cauterizer-worker",
    "crates/contexts/advisory-intake",
    "crates/contexts/asset-portfolio",
    "crates/contexts/commercial-entitlements",
    "crates/contexts/evidence",
    "crates/contexts/external-actions",
    "crates/contexts/integration-management",
    "crates/contexts/isolated-execution",
    "crates/contexts/organization-access",
    "crates/contexts/patch-proposals",
    "crates/contexts/remediation-runs",
    "crates/contexts/verification",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/nicholas-ruest/cauterizer"
publish = false

[workspace.dependencies]
schemars = { version = "1.2.1", features = ["derive"] }
semver = "1.0.28"
serde = { version = "1.0.229", features = ["derive"] }
serde_jcs = "0.2.0"
serde_json = "1.0.151"
sha2 = "0.11.0"
proptest = "1.7.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
aes-gcm = "0.10.3"
ed25519-dalek = "2.2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
