[package]
name = "cauterizer-contracts"
description = "Versioned public contract envelopes for Cauterizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "contracts"

[dependencies]
cauterizer-syntax = { version = "0.1.0", path = "../cauterizer-syntax" }

[lints]
workspace = true
