[package]
name = "cauterizer-infrastructure"
description = "Replaceable infrastructure adapters for Cauterizer ports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "infrastructure"

[dependencies]
cauterizer-contracts = { version = "0.1.0", path = "../cauterizer-contracts" }
cauterizer-syntax = { version = "0.1.0", path = "../cauterizer-syntax" }
serde_json.workspace = true
sqlx.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio.workspace = true

[lints]
workspace = true
