[package]
name = "cauterizer-syntax"
description = "Syntax-only primitives shared across Cauterizer bounded contexts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "shared"

[dependencies]
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
