[package]
name = "cauterizer-advisory-intake-artifacts"
description = "Artifact commit adapter for Advisory Intake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "infrastructure"
context = "advisory-intake"

[dependencies]
cauterizer-advisory-intake = { version = "0.1.0", path = "../../contexts/advisory-intake" }
cauterizer-infrastructure = { version = "0.1.0", path = "../../cauterizer-infrastructure" }
cauterizer-syntax = { version = "0.1.0", path = "../../cauterizer-syntax" }

[lints]
workspace = true
