[package]
name = "cauterizer-asset-portfolio-postgres"
description = "PostgreSQL adapter for the Asset Portfolio bounded context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "infrastructure"
context = "asset-portfolio"

[dependencies]
cauterizer-asset-portfolio = { version = "0.1.0", path = "../../contexts/asset-portfolio" }
cauterizer-infrastructure = { version = "0.1.0", path = "../../cauterizer-infrastructure" }
cauterizer-syntax = { version = "0.1.0", path = "../../cauterizer-syntax" }
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
