[package]
name = "cauterizer-advisory-intake"
description = "Advisory Intake bounded context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "domain"
context = "advisory-intake"

[dependencies]
cauterizer-syntax = { version = "0.1.0", path = "../../cauterizer-syntax" }

[lints]
workspace = true

