[package]
name = "cauterizer-integration-management"
description = "Integration Management bounded context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cauterizer]
layer = "domain"
context = "integration-management"

[dependencies]
cauterizer-syntax = { version = "0.1.0", path = "../../cauterizer-syntax" }

[lints]
workspace = true

